--- a/src/less/app.less
+++ b/src/less/app.less
@@ -8,6 +8,7 @@
 .lv-player {
   width: 100%;
   height: 100%;
+	min-width: 500px;
 }
 
 .lv-controls {
@@ -18,7 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(255, 255, 255, .2);
+  background-color: rgba(0, 0, 0, .8);
   z-index: 2147483647;
 }
 
@@ -54,23 +55,61 @@
 .lv-controls-progress {
   position: absolute;
   display: flex;
-  top: -10px;
-  height: 10px;
+  top: -6px;
+  height: 6px;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.5);
   &-completed {
-    display: inline-block;
+		position: relative;
+    display: flex;
+		justify-content: center;
+		align-items: center;
     height: 100%;
     max-width: 100%;
     background-color: red;
   }
+	&-toucher {
+		position: absolute;
+		right: -6px;
+		display: inline-block;
+		width: 10px;
+		height: 10px;
+		border-radius: 50%;
+		background-color: red;	
+	}
 }
 
 .lv-controls-volume {
+	position: relative;
   height: 20px;
   width: 20px;
 }
 
+.lv-controls-volume-slider {
+	position: absolute;
+	top: -100px;
+	left: -10px;
+	height: 100px;
+	width: 50px;
+	display: flex;
+	justify-content: center;	
+	align-items: center;
+	background-color: rgba(0,0,0,.5);	
+}
+
+.lv-controls-volume-progress {
+	height: 80px;
+	width: 10px;
+	background-color: red;
+	display: flex;
+	justify-content: center;
+	&-completed {
+		position: absolute;
+		height: 5px;
+		width: 16px;
+		background-color: white;		
+	}
+}
 .lv-controls-type {
   padding: 5px 10px;
   border-radius: 20px;
@@ -84,7 +123,7 @@
 }
 
 .lv-page-full {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
